# mgba-live-mcp

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  codecov.yml  pyproject.toml
.github/workflows/: ci.yml  publish-testpypi.yml  release.yml
docs/: mcp-reference.md
scripts/: generate_mcp_reference.py  mgba_live.py
scripts/lua_templates/: README.md  input_one_shot.lua  kamaitachi_fresh_start_to_help_info_page1.lua  macro_async_with_macro_key.lua  memory_probe.lua
src/mgba_live_mcp/: __init__.py  live_cli.py  live_controller.py  server.py  session_manager.py  test_rom.py
src/mgba_live_mcp/resources/: mgba_live_bridge.lua
tests/: test_export_screenshot_tool.py  test_input_tap_snapshot.py  test_live_cli_branch_coverage.py  test_live_controller_error_paths.py  test_live_controller_module.py  test_lua_templates.py  test_mcp_reference_docs.py  test_packaged_bridge_resource.py  test_run_lua_snapshot.py  test_server_branch_coverage.py  test_session_manager.py  test_start_script_flag.py  test_test_rom.py  test_v2_live_controller.py  test_v2_server_contract.py
tests/fixtures/: synthetic.gb
