[project]
name = "mgba-live-mcp"
version = "0.1.0"
description = "MCP server for persistent live mGBA control with script bridge, screenshots, memory and input tooling"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
mgba-live-mcp = "mgba_live_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mgba_live_mcp"]
