[project]
name = "mgba-live-mcp"
version = "0.4.0"
description = "MCP server for persistent live mGBA control with script bridge, screenshots, memory and input tooling"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
mgba-live-mcp = "mgba_live_mcp.server:main"
mgba-live-cli = "mgba_live_mcp.live_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mgba_live_mcp"]

[tool.hatch.build.targets.wheel.force-include]
"src/mgba_live_mcp/resources/mgba_live_bridge.lua" = "mgba_live_mcp/resources/mgba_live_bridge.lua"

[dependency-groups]
dev = [
    { include-group = "lint" },
    { include-group = "typecheck" },
    { include-group = "test" },
]
lint = [
    "pre-commit>=4.0.0",
    "ruff>=0.15.2",
]
test = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
typecheck = [
    "ty>=0.0.17",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
addopts = "--cov=src/mgba_live_mcp --cov-report=term-missing"
testpaths = ["tests"]

[tool.ty.terminal]
error-on-warning = true

[tool.ty.environment]
python-version = "3.11"
